style.css
/* ... */
#contact-us #content #block h2{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    line-height: 26px;
    text-transform: uppercase;

    color: #555555;
}
#contact-us #content #block h1{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 24px;
    line-height: 35px;
    text-transform: uppercase;
    
    color: #333333;
}
#contact-us #content #block h3{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    line-height: 26px;
    /* identical to box height */
    color: #333333;
    text-transform: uppercase;
}
#contact-us #content #block a{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    line-height: 26px;
    /* identical to box height */
    text-decoration: none!important;
    
    color: #333333;
    
}
#contact-us #content #map{
    grid-row: 1;
    grid-column: 1;
    height: 631px;
}
footer{
    display: grid;
    background: linear-gradient(252.83deg, rgba(249, 32, 32, 0.3328) 4.85%, rgba(43, 102, 255, 0.2964) 98.69%), #272727;
    background-blend-mode: color, normal;
    padding: 2% 10%;
}
footer #qr-code{
    width: 296px;
    height: 296px;
    border-radius: 50%;
    background: rgba(0, 0,0,0.1);
    display: grid;
    grid-column: 2;
    grid-row: 1;
    justify-self: center;
    align-self: center;
    justify-items: center;
    align-items: center;
}
footer #qr-code div{
    margin-bottom: 26px;
}
footer #qr-code div p{
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    line-height: 26px;
    text-align: center;
    margin-bottom: 18px;
    color: #FFFFFF;
}
footer #our-contacts{
    grid-column: 1;
    grid-row: 1;
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    line-height: 26px;
    color: #DEDEDE;
    margin: 0;

}
footer #our-contacts img{
    width: 165px;
    height: 41px;
    margin-top:37px;
}
footer p{
    margin: 0;
}
footer #our-contacts h5{
    line-height: 31px;
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    color: #DEDEDE;
    margin: 0;
}
footer #our-contacts h6{
    margin:0px 0px 11px 0px;
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    line-height: 26px;

    color: #DEDEDE;
}
footer #our-contacts p, footer #our-contacts a{
    margin: 4.5px 0px;
    text-decoration: none;
}
footer #our-contacts hr{
    width: 30px;
    height: 0px;
    opacity: 0.5;
    border: 2px solid #CCCCCC;
    margin: 22px 0px;
    align-self: center;
}
footer #info{
    grid-column: 3;
    grid-row: 1;
    font-family: Noto Sans SC;
    font-style: normal;
    font-weight: bold;
    font-size: 18px;
    line-height: 36px;
    text-align: right;

    color: #FFFFFF;
}
h2{
    margin: 39px 0px 0px 0px;
}
@media (min-width: 768px) and (max-width: 999px){
    a {
        text-decoration: none!important; 
        color: white!important;   
    }
    #benefits-to-you #image{
        grid-row: 1;
        grid-column: 1;
        position: relative;
        background: url(./assets/img/assets-mobile-version.png);
        background-size: cover;
        width: 300px;
        height: 400px;
        background-position-y: -85px;
        margin-right: 50px;
    }
    #benefits-to-you #text{
        grid-row: 1;
        grid-column: 2!important;
    }
    #header #title h1 {
        font-size: 96px;
    }
    #header #title h2 {
        font-size: 36px;
    }
    #what-we-offer .card{
        margin: 10px 0px 10px 5px;
        height: 484px;
    }
    #what-we-offer #card-8{
        height: 615px;
    }
    #nav,.Navbar__Link{
        font-size: 12px;
    }
    #about-us #text{
        bottom: 39%;
    }
    #about-us #head-span{
        margin: 0px;
    }
    #contact-us #content #block {
        grid-row: 2;
        width: 100vw;
        margin: 0;
    }
    #our-projects #text{
        justify-self: center;
        display: grid;
        grid-column: 1/3;
    }
    #our-projects .cards:nth-last-of-type(2){
        grid-column: 2;
    }
    #our-projects .cards{
        grid-row: 2;
        justify-self: flex-end;
    }
    #our-projects  #card-1, #our-projects #card-5{
        grid-row: 1;
    }
    #our-projects #card-2, #our-projects #card-6{
        grid-row: 2;
    }
    #our-projects #card-3, #our-projects #card-7{
        grid-row: 3;
    }
    #our-projects #card-4, #our-projects #card-8{
        grid-row: 4;
    }
    #what-we-offer #cards-1{
        grid-column: 1;
        grid-row: 2;
    }
    #what-we-offer #cards-3{
        grid-column: 2;
        grid-row: 2;
    }
    #what-we-offer #cards-2{
        grid-column: 1/3;
        grid-row: 4;
    }
    #what-we-offer #text-content{
        grid-column: 1/3;
        grid-row: 1;
    }
    #about-us #people{
        left: 0px;
    }
    #about-us #text{
        margin: 87px 0px 20px 0px;
    }
    footer{
        padding: 2% 5%;
    }
    footer #info {
        font-size: 11px;
    }
    #header #title h2{
        margin: 50px 0px;
    }
    #contact-us #content #block {
        grid-row: 2/4;
        width: 90vw;
        margin: 0;
        align-self: center;
        justify-self: center;
    }
    #contact-us #content #map{
        grid-row: 1/3;
    }
    #about-us #people img{
        max-width: 459px!important;
    }
}
/* ... */

